--- a/_site.yml
+++ b/_site.yml
@@ -1,18 +1,18 @@
 name: "jakubguzek.eu"
 output_dir: "."
 navbar:
-        title: "Jakub. J. Guzek"
+        type: inverse
         left:
-                - text: "Home"
+                - text: "Jakub J. Guzek"
                   href: index.html
                 - text: "Documents"
-                  menu:
-                          - text: "Biotechnology Course"
-                            href: biotech_docs.html
-                          - text: "Miscellaneous Projects"
-                            href: misc.html
-                          - text: "*Curriculum vitae*"
-                            href: cv.html
+                - text: "Biotechnology Course"
+                  href: biotech_docs.html
+                - text: "Miscellaneous Projects"
+                  href: misc.html
+                - text: "*Curriculum vitae*"
+                  ihref: cv.html
+        right:
                 - text: GitHub
                   icon: fa-github
                   href: https://github.com/jakubguzek
