--- a/_site.yml
+++ b/_site.yml
@@ -17,4 +17,4 @@ navbar:
                   href: https://github.com/jakubguzek
 output:
         html_document:
-                theme: cerulean
+                theme: journal
