only icons on navbar

--- a/_site.yml
+++ b/_site.yml
@@ -11,11 +11,9 @@ navbar:
                 - text: "Curriculum vitae"
                   href: cv.html
         right:
-                - text: LinkedIn
-                  icon: fa-linkedin
+                - icon: fa-linkedin
                   href: https://www.linkedin.com/in/jakub-guzek-4270a0193/
-                - text: GitHub
-                  icon: fa-github
+                - icon: fa-github
                   href: https://github.com/jakubguzek
 output:
         html_document:
